# hs-simpletemplate

./: simpletemplate.cabal
Text/: SimpleTemplate.hs
